[package]
name = "rusttun"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/bin/server.rs"
[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
bytes = "1.11.1"
crc32fast = "1.4"
hex = "0.4.3"
ipnet = "2.12.0"
quinn = "0.11.9"
quinn-proto = "0.11.14"
rand = "0.10.0"
rcgen = "0.14.7"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
time = "0.3.47"
tokio = { version = "1.50.0", features = ["full"] }
toml = "0.8"
tun-rs = { version = "2.8.2", features = ["async_tokio"] }
